<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.4.0</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>
	<groupId>org.farhan</groupId>
	<artifactId>sheep-dog-svc-maven-plugin</artifactId>
	<version>1.2-SNAPSHOT</version>
	<packaging>maven-plugin</packaging>
	<name>Sheep Dog Service Maven Plugin</name>

	<properties>
		<maven-plugin-tools.version>4.0.0-beta-1</maven-plugin-tools.version>
		<project.build.sourceEncoding>
			UTF-8</project.build.sourceEncoding>
		<java.version>21</java.version>
		<sheep-dog-grammar.version>1.42-SNAPSHOT</sheep-dog-grammar.version>
		<sheepdog.namespace>dev</sheepdog.namespace>
		<sheepdog.host>${sheepdog.namespace}.sheepdog.io</sheepdog.host>
		<argLine>-XX:+EnableDynamicAgentLoading</argLine>
	</properties>

	<scm>
		<connection>scm:git:https://github.com/farhan5248/sheep-dog-svc</connection>
		<tag>sheep-dog-svc-maven-plugin-1.28</tag>
	</scm>

	<pluginRepositories>
		<pluginRepository>
			<id>github</id>
			<url>https://maven.pkg.github.com/farhan5248/sheep-dog-cloud</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</pluginRepository>
		<pluginRepository>
			<id>github-main</id>
			<url>https://maven.pkg.github.com/farhan5248/sheep-dog-main</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>

	<repositories>
		<repository>
			<id>github</id>
			<url>https://maven.pkg.github.com/farhan5248/sheep-dog-cloud</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>github-main</id>
			<url>https://maven.pkg.github.com/farhan5248/sheep-dog-main</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>

	<distributionManagement>
		<repository>
			<id>github</id>
			<url>https://maven.pkg.github.com/farhan5248/sheep-dog-main</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</distributionManagement>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.junit</groupId>
				<artifactId>junit-bom</artifactId>
				<version>5.13.1</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>io.cucumber</groupId>
				<artifactId>cucumber-bom</artifactId>
				<version>7.23.0</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-contract-dependencies</artifactId>
				<version>4.3.0</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-starter-contract-stub-runner</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.maven</groupId>
			<artifactId>maven-plugin-api</artifactId>
			<version>3.9.6</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.maven.plugin-tools</groupId>
			<artifactId>maven-plugin-annotations</artifactId>
			<version>3.9.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.maven</groupId>
			<artifactId>maven-artifact</artifactId>
			<version>3.9.6</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.maven</groupId>
			<artifactId>maven-project</artifactId>
			<version>2.2.1</version>
			<scope>provided</scope>
		</dependency>
		<!-- Cucumber -->
		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-java</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-spring</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-junit-platform-engine</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.platform</groupId>
			<artifactId>junit-platform-suite</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.retry</groupId>
			<artifactId>spring-retry</artifactId>
			<version>2.0.5</version>
		</dependency>
		<dependency>
			<groupId>org.farhan</groupId>
			<artifactId>sheep-dog-grammar</artifactId>
			<version>${sheep-dog-grammar.version}</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.farhan</groupId>
				<artifactId>sheep-dog-svc-maven-plugin</artifactId>
				<version>1.1</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<encoding>UTF-8</encoding>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<properties>
						<!-- Work around. Surefire does not include enough
                             information to disambiguate between different
                             examples and scenarios. -->
						<configurationParameters>
							cucumber.junit-platform.naming-strategy=long
						</configurationParameters>
					</properties>
					<systemPropertyVariables>
						<maven.repo.local>${settings.localRepository}</maven.repo.local>
					</systemPropertyVariables>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.14</version>
				<executions>
					<execution>
						<id>prepare-agent</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-antrun-plugin</artifactId>
				<version>3.1.0</version>
				<dependencies>
					<dependency>
						<groupId>org.jacoco</groupId>
						<artifactId>org.jacoco.ant</artifactId>
						<version>0.8.14</version>
						<classifier>nodeps</classifier>
					</dependency>
				</dependencies>
				<executions>
					<execution>
						<id>jacoco-report-with-tests</id>
						<phase>verify</phase>
						<goals>
							<goal>run</goal>
						</goals>
						<configuration>
							<skip>${skipTests}</skip>
							<target>
								<taskdef name="report" classname="org.jacoco.ant.ReportTask" classpathref="maven.plugin.classpath" />
								<report>
									<executiondata>
										<file file="${project.build.directory}/jacoco.exec" />
									</executiondata>
									<structure name="${project.name}">
										<classfiles>
											<fileset dir="${project.build.directory}/classes" />
											<fileset dir="${project.build.directory}/test-classes" />
										</classfiles>
										<sourcefiles encoding="UTF-8">
											<fileset dir="${project.build.sourceDirectory}" />
											<fileset dir="${project.build.testSourceDirectory}" />
											<fileset dir="${project.basedir}/src-gen/test/java" />
										</sourcefiles>
									</structure>
									<html destdir="${project.build.directory}/site/jacoco-with-tests" />
									<xml destfile="${project.build.directory}/site/jacoco-with-tests/jacoco.xml" />
									<csv destfile="${project.build.directory}/site/jacoco-with-tests/jacoco.csv" />
								</report>
							</target>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<configuration>
					<includes>
						<include>**/*IT</include>
						<include>**/*IntegrationTest</include>
					</includes>
					<systemPropertyVariables>
						<sheepdog.host>${sheepdog.host}</sheepdog.host>
					</systemPropertyVariables>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>versions-maven-plugin</artifactId>
				<version>2.16.2</version>
				<configuration>
					<includes>
						<include>org.farhan:*:*</include>
					</includes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.farhan</groupId>
				<artifactId>sheep-dog-mgmt-maven-plugin</artifactId>
				<version>1.16</version>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
				<version>3.3.0</version>
				<executions>
					<execution>
						<id>add-test-source</id>
						<phase>initialize</phase>
						<goals>
							<goal>add-test-source</goal>
							<goal>add-test-resource</goal>
						</goals>
						<configuration>
							<sources>
								<source>src-gen/test/java</source>
							</sources>
							<resources>
								<resource>
									<directory>src-gen/test/resources</directory>
								</resource>
							</resources>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>